# oss-lifecycle

./: LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
data/: jupyterlab-jupyterlab-commits.csv  jupyterlab-jupyterlab-monthly.csv
docs/: OpenSource.bib
src/: activity_report.py  collector_script.py  count_tokens.py  fit_bass.py  fit_innovation.py  github_gather.py  index.html  script.js  server.py  stats.py  styles.css
